--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
