--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
+    "modern-normalize": "^3.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "use-debounce": "^10.0.6"
