--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
+  "name": "my-react-app",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
+    "formik": "^2.4.9",
     "modern-normalize": "^3.0.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "use-debounce": "^10.0.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-paginate": "^8.3.0",
+    "use-debounce": "^10.0.6",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-paginate": "^7.1.4",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "vite": "^7.3.0"
   }
